--- a/components/color-picker.html
+++ b/components/color-picker.html
@@ -433,7 +433,20 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.12" data-path="r-help.html">
+        <li class="chapter " data-level="1.4.12" data-path="proportions-survey.html">
+            
+                <a href="proportions-survey.html">
+            
+                    
+                    Proportions Survey
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.13" data-path="r-help.html">
             
                 <a href="r-help.html">
             
@@ -446,7 +459,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.13" data-path="r-output.html">
+        <li class="chapter " data-level="1.4.14" data-path="r-output.html">
             
                 <a href="r-output.html">
             
@@ -459,7 +472,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.14" data-path="r-shell.html">
+        <li class="chapter " data-level="1.4.15" data-path="r-shell.html">
             
                 <a href="r-shell.html">
             
@@ -472,7 +485,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.15" data-path="r-table.html">
+        <li class="chapter " data-level="1.4.16" data-path="r-table.html">
             
                 <a href="r-table.html">
             
@@ -485,7 +498,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.16" data-path="slider.html">
+        <li class="chapter " data-level="1.4.17" data-path="slider.html">
             
                 <a href="slider.html">
             
@@ -498,7 +511,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.17" data-path="switch.html">
+        <li class="chapter " data-level="1.4.18" data-path="switch.html">
             
                 <a href="switch.html">
             
@@ -511,7 +524,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.18" data-path="text-area.html">
+        <li class="chapter " data-level="1.4.19" data-path="text-area.html">
             
                 <a href="text-area.html">
             
@@ -524,7 +537,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.19" data-path="text.html">
+        <li class="chapter " data-level="1.4.20" data-path="text.html">
             
                 <a href="text.html">
             
@@ -537,7 +550,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.20" data-path="timer.html">
+        <li class="chapter " data-level="1.4.21" data-path="timer.html">
             
                 <a href="timer.html">
             
@@ -550,7 +563,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.21" data-path="latex.html">
+        <li class="chapter " data-level="1.4.22" data-path="latex.html">
             
                 <a href="latex.html">
             
@@ -563,7 +576,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.22" data-path="video-player.html">
+        <li class="chapter " data-level="1.4.23" data-path="video-player.html">
             
                 <a href="video-player.html">
             
@@ -708,7 +721,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Color Picker","level":"1.4.1","depth":2,"next":{"title":"Dashboard","level":"1.4.2","depth":2,"path":"components/dashboard.md","ref":"components/dashboard.md","articles":[{"title":"Checkbox Input","level":"1.4.2.1","depth":3,"path":"components/checkbox-input.md","ref":"components/checkbox-input.md","articles":[]},{"title":"Number Input","level":"1.4.2.2","depth":3,"path":"components/number-input.md","ref":"components/number-input.md","articles":[]},{"title":"Select Input","level":"1.4.2.3","depth":3,"path":"components/select-input.md","ref":"components/select-input.md","articles":[]},{"title":"Slider Input","level":"1.4.2.4","depth":3,"path":"components/slider-input.md","ref":"components/slider-input.md","articles":[]},{"title":"Text Input","level":"1.4.2.5","depth":3,"path":"components/text-input.md","ref":"components/text-input.md","articles":[]}]},"previous":{"title":"ISLE Components","level":"1.4","depth":1,"path":"components.md","ref":"components.md","articles":[{"title":"Color Picker","level":"1.4.1","depth":2,"path":"components/color-picker.md","ref":"components/color-picker.md","articles":[]},{"title":"Dashboard","level":"1.4.2","depth":2,"path":"components/dashboard.md","ref":"components/dashboard.md","articles":[{"title":"Checkbox Input","level":"1.4.2.1","depth":3,"path":"components/checkbox-input.md","ref":"components/checkbox-input.md","articles":[]},{"title":"Number Input","level":"1.4.2.2","depth":3,"path":"components/number-input.md","ref":"components/number-input.md","articles":[]},{"title":"Select Input","level":"1.4.2.3","depth":3,"path":"components/select-input.md","ref":"components/select-input.md","articles":[]},{"title":"Slider Input","level":"1.4.2.4","depth":3,"path":"components/slider-input.md","ref":"components/slider-input.md","articles":[]},{"title":"Text Input","level":"1.4.2.5","depth":3,"path":"components/text-input.md","ref":"components/text-input.md","articles":[]}]},{"title":"Draggable List","level":"1.4.3","depth":2,"path":"components/draggable-list.md","ref":"components/draggable-list.md","articles":[]},{"title":"Expire","level":"1.4.4","depth":2,"path":"components/expire.md","ref":"components/expire.md","articles":[]},{"title":"Feedback Buttons","level":"1.4.5","depth":2,"path":"components/feedback.md","ref":"components/feedback.md","articles":[]},{"title":"Free Text Question","level":"1.4.6","depth":2,"path":"components/free-text-question.md","ref":"components/free-text-question.md","articles":[]},{"title":"Grid","level":"1.4.7","depth":2,"path":"components/grid.md","ref":"components/grid.md","articles":[]},{"title":"Lesson Submit","level":"1.4.8","depth":2,"path":"components/lesson-submit.md","ref":"components/lesson-submit.md","articles":[]},{"title":"Match List Question","level":"1.4.9","depth":2,"path":"components/match-list-question.md","ref":"components/match-list-question.md","articles":[]},{"title":"Multiple Choice Question","level":"1.4.10","depth":2,"path":"components/multiple-choice-question.md","ref":"components/multiple-choice-question.md","articles":[]},{"title":"Plots","level":"1.4.11","depth":2,"path":"components/plots.md","ref":"components/plots.md","articles":[{"title":"Density Plot","level":"1.4.11.1","depth":3,"path":"components/density-plot.md","ref":"components/density-plot.md","articles":[]},{"title":"R Plot","level":"1.4.11.2","depth":3,"path":"components/r-plot.md","ref":"components/r-plot.md","articles":[]}]},{"title":"R Help","level":"1.4.12","depth":2,"path":"components/r-help.md","ref":"components/r-help.md","articles":[]},{"title":"R Output","level":"1.4.13","depth":2,"path":"components/r-output.md","ref":"components/r-output.md","articles":[]},{"title":"R Shell","level":"1.4.14","depth":2,"path":"components/r-shell.md","ref":"components/r-shell.md","articles":[]},{"title":"R Table","level":"1.4.15","depth":2,"path":"components/r-table.md","ref":"components/r-table.md","articles":[]},{"title":"Slider","level":"1.4.16","depth":2,"path":"components/slider.md","ref":"components/slider.md","articles":[]},{"title":"Switch","level":"1.4.17","depth":2,"path":"components/switch.md","ref":"components/switch.md","articles":[]},{"title":"Text Area","level":"1.4.18","depth":2,"path":"components/text-area.md","ref":"components/text-area.md","articles":[]},{"title":"Text","level":"1.4.19","depth":2,"path":"components/text.md","ref":"components/text.md","articles":[]},{"title":"Timer","level":"1.4.20","depth":2,"path":"components/timer.md","ref":"components/timer.md","articles":[]},{"title":"LaTeX Equations","level":"1.4.21","depth":2,"path":"components/latex.md","ref":"components/latex.md","articles":[]},{"title":"Video Player","level":"1.4.22","depth":2,"path":"components/video-player.md","ref":"components/video-player.md","articles":[]}]},"dir":"ltr"},"config":{"plugins":["edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/color-picker.md","mtime":"2016-11-17T20:41:46.348Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2016-12-28T20:36:10.522Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Color Picker","level":"1.4.1","depth":2,"next":{"title":"Dashboard","level":"1.4.2","depth":2,"path":"components/dashboard.md","ref":"components/dashboard.md","articles":[{"title":"Checkbox Input","level":"1.4.2.1","depth":3,"path":"components/checkbox-input.md","ref":"components/checkbox-input.md","articles":[]},{"title":"Number Input","level":"1.4.2.2","depth":3,"path":"components/number-input.md","ref":"components/number-input.md","articles":[]},{"title":"Select Input","level":"1.4.2.3","depth":3,"path":"components/select-input.md","ref":"components/select-input.md","articles":[]},{"title":"Slider Input","level":"1.4.2.4","depth":3,"path":"components/slider-input.md","ref":"components/slider-input.md","articles":[]},{"title":"Text Input","level":"1.4.2.5","depth":3,"path":"components/text-input.md","ref":"components/text-input.md","articles":[]}]},"previous":{"title":"ISLE Components","level":"1.4","depth":1,"path":"components.md","ref":"components.md","articles":[{"title":"Color Picker","level":"1.4.1","depth":2,"path":"components/color-picker.md","ref":"components/color-picker.md","articles":[]},{"title":"Dashboard","level":"1.4.2","depth":2,"path":"components/dashboard.md","ref":"components/dashboard.md","articles":[{"title":"Checkbox Input","level":"1.4.2.1","depth":3,"path":"components/checkbox-input.md","ref":"components/checkbox-input.md","articles":[]},{"title":"Number Input","level":"1.4.2.2","depth":3,"path":"components/number-input.md","ref":"components/number-input.md","articles":[]},{"title":"Select Input","level":"1.4.2.3","depth":3,"path":"components/select-input.md","ref":"components/select-input.md","articles":[]},{"title":"Slider Input","level":"1.4.2.4","depth":3,"path":"components/slider-input.md","ref":"components/slider-input.md","articles":[]},{"title":"Text Input","level":"1.4.2.5","depth":3,"path":"components/text-input.md","ref":"components/text-input.md","articles":[]}]},{"title":"Draggable List","level":"1.4.3","depth":2,"path":"components/draggable-list.md","ref":"components/draggable-list.md","articles":[]},{"title":"Expire","level":"1.4.4","depth":2,"path":"components/expire.md","ref":"components/expire.md","articles":[]},{"title":"Feedback Buttons","level":"1.4.5","depth":2,"path":"components/feedback.md","ref":"components/feedback.md","articles":[]},{"title":"Free Text Question","level":"1.4.6","depth":2,"path":"components/free-text-question.md","ref":"components/free-text-question.md","articles":[]},{"title":"Grid","level":"1.4.7","depth":2,"path":"components/grid.md","ref":"components/grid.md","articles":[]},{"title":"Lesson Submit","level":"1.4.8","depth":2,"path":"components/lesson-submit.md","ref":"components/lesson-submit.md","articles":[]},{"title":"Match List Question","level":"1.4.9","depth":2,"path":"components/match-list-question.md","ref":"components/match-list-question.md","articles":[]},{"title":"Multiple Choice Question","level":"1.4.10","depth":2,"path":"components/multiple-choice-question.md","ref":"components/multiple-choice-question.md","articles":[]},{"title":"Plots","level":"1.4.11","depth":2,"path":"components/plots.md","ref":"components/plots.md","articles":[{"title":"Density Plot","level":"1.4.11.1","depth":3,"path":"components/density-plot.md","ref":"components/density-plot.md","articles":[]},{"title":"R Plot","level":"1.4.11.2","depth":3,"path":"components/r-plot.md","ref":"components/r-plot.md","articles":[]}]},{"title":"Proportions Survey","level":"1.4.12","depth":2,"path":"components/proportions-survey.md","ref":"components/proportions-survey.md","articles":[]},{"title":"R Help","level":"1.4.13","depth":2,"path":"components/r-help.md","ref":"components/r-help.md","articles":[]},{"title":"R Output","level":"1.4.14","depth":2,"path":"components/r-output.md","ref":"components/r-output.md","articles":[]},{"title":"R Shell","level":"1.4.15","depth":2,"path":"components/r-shell.md","ref":"components/r-shell.md","articles":[]},{"title":"R Table","level":"1.4.16","depth":2,"path":"components/r-table.md","ref":"components/r-table.md","articles":[]},{"title":"Slider","level":"1.4.17","depth":2,"path":"components/slider.md","ref":"components/slider.md","articles":[]},{"title":"Switch","level":"1.4.18","depth":2,"path":"components/switch.md","ref":"components/switch.md","articles":[]},{"title":"Text Area","level":"1.4.19","depth":2,"path":"components/text-area.md","ref":"components/text-area.md","articles":[]},{"title":"Text","level":"1.4.20","depth":2,"path":"components/text.md","ref":"components/text.md","articles":[]},{"title":"Timer","level":"1.4.21","depth":2,"path":"components/timer.md","ref":"components/timer.md","articles":[]},{"title":"LaTeX Equations","level":"1.4.22","depth":2,"path":"components/latex.md","ref":"components/latex.md","articles":[]},{"title":"Video Player","level":"1.4.23","depth":2,"path":"components/video-player.md","ref":"components/video-player.md","articles":[]}]},"dir":"ltr"},"config":{"plugins":["edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/color-picker.md","mtime":"2016-11-17T20:41:46.348Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2017-09-13T21:52:13.427Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
