--- a/components/proportions-survey.html
+++ b/components/proportions-survey.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-        <title>R Help · ISLE Editor Documentation</title>
+        <title>Proportions Survey · ISLE Editor Documentation</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="description" content="">
         <meta name="generator" content="GitBook 3.2.2">
@@ -57,10 +57,10 @@
     <link rel="shortcut icon" href="../gitbook/images/favicon.ico" type="image/x-icon">
 
     
-    <link rel="next" href="r-output.html" />
+    <link rel="next" href="r-help.html" />
     
     
-    <link rel="prev" href="proportions-survey.html" />
+    <link rel="prev" href="r-plot.html" />
     
 
     </head>
@@ -433,7 +433,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.12" data-path="proportions-survey.html">
+        <li class="chapter active" data-level="1.4.12" data-path="proportions-survey.html">
             
                 <a href="proportions-survey.html">
             
@@ -446,7 +446,7 @@
             
         </li>
     
-        <li class="chapter active" data-level="1.4.13" data-path="r-help.html">
+        <li class="chapter " data-level="1.4.13" data-path="r-help.html">
             
                 <a href="r-help.html">
             
@@ -637,7 +637,7 @@
     <!-- Title -->
     <h1>
         <i class="fa fa-circle-o-notch fa-spin"></i>
-        <a href=".." >R Help</a>
+        <a href=".." >Proportions Survey</a>
     </h1>
 </div>
 
@@ -652,16 +652,34 @@
     
                                 <section class="normal markdown-section">
                                 
-                                <h1 id="r-help">R Help</h1>
-<p>Make words pull up R documentation in a modal window when clicked.</p>
+                                <h1 id="proportionssurvey">ProportionsSurvey</h1>
+<p>Component that allows a group of people to vote on the weights and importance of given options.</p>
 <h4 id="example">Example:</h4>
-<pre class="language-"><code class="lang-js"><span class="token operator">&lt;</span>RHelp library<span class="token operator">=</span><span class="token string">&quot;graphics&quot;</span><span class="token operator">&gt;</span>hist<span class="token operator">&lt;</span><span class="token operator">/</span>RHelp<span class="token operator">&gt;</span> is used to create a histogram<span class="token punctuation">.</span>
+<pre class="language-"><code class="lang-js"><span class="token operator">&lt;</span>ProportionsSurvey 
+    user
+    id<span class="token operator">=</span><span class="token string">&quot;Survey&quot;</span>
+    question<span class="token operator">=</span><span class="token string">&quot;Decide what is important&quot;</span>
+    group<span class="token operator">=</span><span class="token string">&quot;Group decision&quot;</span>
+    nElements<span class="token operator">=</span><span class="token punctuation">{</span><span class="token number">3</span><span class="token punctuation">}</span>
+    colors <span class="token operator">=</span> <span class="token punctuation">{</span><span class="token punctuation">[</span> <span class="token string">&quot;red&quot;</span><span class="token punctuation">,</span> <span class="token string">&quot;blue&quot;</span><span class="token punctuation">,</span> <span class="token string">&quot;gold&quot;</span> <span class="token punctuation">]</span><span class="token punctuation">}</span>
+    personalHeight<span class="token operator">=</span><span class="token punctuation">{</span><span class="token number">300</span><span class="token punctuation">}</span>
+    groupHeight<span class="token operator">=</span><span class="token punctuation">{</span><span class="token number">200</span><span class="token punctuation">}</span>
+    margin<span class="token operator">=</span><span class="token string">&quot;80px&quot;</span>
+    legends<span class="token operator">=</span><span class="token punctuation">{</span><span class="token punctuation">[</span> <span class="token string">&quot;Bitcoin&quot;</span><span class="token punctuation">,</span> <span class="token string">&quot;Gold&quot;</span><span class="token punctuation">,</span> <span class="token string">&quot;Diamanten&quot;</span> <span class="token punctuation">]</span><span class="token punctuation">}</span>
+<span class="token operator">/</span><span class="token operator">&gt;</span>
 </code></pre>
 <h4 id="options">Options:</h4>
 <ul>
-<li><strong>func</strong>: name of the <code>R function</code> for which to open the documentation. If not supplied, the content of the <code>RHelp</code> tag is assumed to be equal to the name of the function. Default: <code>&apos;&apos;</code>.</li>
-<li><strong>library</strong>: name of the R package in which the function resides. Default: <code>base</code>.</li>
-<li><strong>visible</strong>: <code>boolean</code> indicating whether the help modal window should be opened at startup. Default: <code>false</code>.</li>
+<li><strong>user</strong>: Makes it visible to registered users.</li>
+<li><strong>id</strong>: <code>string</code> - the ID of the component (required).</li>
+<li><strong>question</strong>: <code>string</code> that describes the question at hand.</li>
+<li><strong>group</strong>: <code>string</code> that gives the title of the group decision.</li>
+<li><strong>nElements</strong>: <code>number of elements</code> that shall be weighed.</li>
+<li><strong>legends</strong>: <code>Array of strings</code> that describe the options to be weighed.</li>
+<li><strong>colors</strong>: <code>Array of strings</code> that define the colors. Ifd not defined, a custom color scale will be used.</li>
+<li><strong>personalHeight</strong>: <code>number</code> which defines the height of the personal input.</li>
+<li><strong>groupHeight</strong>: <code>number</code> which defines the height of the group element.</li>
+<li><strong>margin</strong>: <code>string in px</code> which allows the correction of the number display.</li>
 </ul>
 
                                 
@@ -690,12 +708,12 @@
 
             
                 
-                <a href="proportions-survey.html" class="navigation navigation-prev " aria-label="Previous page: Proportions Survey">
+                <a href="r-plot.html" class="navigation navigation-prev " aria-label="Previous page: R Plot">
                     <i class="fa fa-angle-left"></i>
                 </a>
                 
                 
-                <a href="r-output.html" class="navigation navigation-next " aria-label="Next page: R Output">
+                <a href="r-help.html" class="navigation navigation-next " aria-label="Next page: R Help">
                     <i class="fa fa-angle-right"></i>
                 </a>
                 
@@ -706,7 +724,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"R Help","level":"1.4.13","depth":2,"next":{"title":"R Output","level":"1.4.14","depth":2,"path":"components/r-output.md","ref":"components/r-output.md","articles":[]},"previous":{"title":"Proportions Survey","level":"1.4.12","depth":2,"path":"components/proportions-survey.md","ref":"components/proportions-survey.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/r-help.md","mtime":"2016-11-21T01:57:03.304Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2017-09-13T21:52:13.427Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Proportions Survey","level":"1.4.12","depth":2,"next":{"title":"R Help","level":"1.4.13","depth":2,"path":"components/r-help.md","ref":"components/r-help.md","articles":[]},"previous":{"title":"R Plot","level":"1.4.11.2","depth":3,"path":"components/r-plot.md","ref":"components/r-plot.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/proportions-survey.md","mtime":"2017-09-13T21:43:53.000Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2017-09-13T21:52:13.427Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
