--- a/components/timer.html
+++ b/components/timer.html
@@ -433,7 +433,20 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.12" data-path="r-help.html">
+        <li class="chapter " data-level="1.4.12" data-path="proportions-survey.html">
+            
+                <a href="proportions-survey.html">
+            
+                    
+                    Proportions Survey
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.13" data-path="r-help.html">
             
                 <a href="r-help.html">
             
@@ -446,7 +459,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.13" data-path="r-output.html">
+        <li class="chapter " data-level="1.4.14" data-path="r-output.html">
             
                 <a href="r-output.html">
             
@@ -459,7 +472,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.14" data-path="r-shell.html">
+        <li class="chapter " data-level="1.4.15" data-path="r-shell.html">
             
                 <a href="r-shell.html">
             
@@ -472,7 +485,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.15" data-path="r-table.html">
+        <li class="chapter " data-level="1.4.16" data-path="r-table.html">
             
                 <a href="r-table.html">
             
@@ -485,7 +498,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.16" data-path="slider.html">
+        <li class="chapter " data-level="1.4.17" data-path="slider.html">
             
                 <a href="slider.html">
             
@@ -498,7 +511,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.17" data-path="switch.html">
+        <li class="chapter " data-level="1.4.18" data-path="switch.html">
             
                 <a href="switch.html">
             
@@ -511,7 +524,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.18" data-path="text-area.html">
+        <li class="chapter " data-level="1.4.19" data-path="text-area.html">
             
                 <a href="text-area.html">
             
@@ -524,7 +537,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.19" data-path="text.html">
+        <li class="chapter " data-level="1.4.20" data-path="text.html">
             
                 <a href="text.html">
             
@@ -537,7 +550,7 @@
             
         </li>
     
-        <li class="chapter active" data-level="1.4.20" data-path="timer.html">
+        <li class="chapter active" data-level="1.4.21" data-path="timer.html">
             
                 <a href="timer.html">
             
@@ -550,7 +563,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.21" data-path="latex.html">
+        <li class="chapter " data-level="1.4.22" data-path="latex.html">
             
                 <a href="latex.html">
             
@@ -563,7 +576,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.22" data-path="video-player.html">
+        <li class="chapter " data-level="1.4.23" data-path="video-player.html">
             
                 <a href="video-player.html">
             
@@ -701,7 +714,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Timer","level":"1.4.20","depth":2,"next":{"title":"LaTeX Equations","level":"1.4.21","depth":2,"path":"components/latex.md","ref":"components/latex.md","articles":[]},"previous":{"title":"Text","level":"1.4.19","depth":2,"path":"components/text.md","ref":"components/text.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/timer.md","mtime":"2016-11-21T04:42:54.606Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2016-12-28T20:36:10.522Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Timer","level":"1.4.21","depth":2,"next":{"title":"LaTeX Equations","level":"1.4.22","depth":2,"path":"components/latex.md","ref":"components/latex.md","articles":[]},"previous":{"title":"Text","level":"1.4.20","depth":2,"path":"components/text.md","ref":"components/text.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/timer.md","mtime":"2016-11-21T04:42:54.606Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2017-09-13T21:52:13.427Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
